--- a/test/fixtures/asset/sprite.css.erb
+++ b/test/fixtures/asset/sprite.css.erb
@@ -3,7 +3,8 @@
  */
 
 <%
-  require 'base64'
+  # TODO: should not be shaddowing Kernal::require
+  Kernel.require 'base64'
   path = File.expand_path("../POW.png", __FILE__)
   data = Base64.encode64(File.open(path, "rb") { |f| f.read })
 %>
