Add missing colons

--- a/test/fixtures/context/resolve_content_type.js.erb
+++ b/test/fixtures/context/resolve_content_type.js.erb
@@ -1,4 +1,4 @@
 <%= resolve("foo.js") %>,
 <%= resolve("foo.js", :content_type => "application/javascript") %>,
 <%= resolve("foo.js", :content_type => :self) %>,
-<%= begin; resolve("foo.js", :content_type => "text/css"); rescue Exception => e; e end %>
+<%= begin; resolve("foo.js", :content_type => "text/css"); rescue Exception => e; e end %>;
